# linear-regression

./: .gitignore  LICENSE  README.md  pyproject.toml
linear_regression/: __init__.py  scripts.py
tests/: test_gd.py  test_ols.py  utils.py
